# monclitype

./: Cargo.toml  README.md
dictionaries/: default.txt
src/: main.rs  sentences.rs  splitter.rs  tui.rs  types.rs
src/views/: mod.rs  run.rs  statistics.rs  typing_playground.rs
