[package]
name = "monclitype"
version = "0.1.0"
edition = "2021"
authors = ["joyanedel <iamjoyanedel@gmail.com>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.13.0"
rand = "0.8.5"
ratatui = "0.26.3"
